Version 3.8.2     unreleased

	* Pull in latest updates from run-script-framework.

Version 3.8.1     26 Feb 2024

	* Upgrade to Poetry v1.8.0 and make related adjustments.
	* Disable Python keyring via poetry.toml.
	* Update Poetry install instructions in DEVELOPER.md.
	* Pull in latest version of run-script-framework.
	* Upgrade to gha-shared-workflows@v4 with new Poetry setup.
	* Add support for 'run outdated' and update dependencies.

Version 3.8.0     17 Jan 2024

	* Constrain some dependencies to be compatible with Debian.
	* Disable intersphinx plugin for docs, which no longer seems to work.
	* Update jinja2 to address CVE-2024-22195 from Dependabot.

Version 3.7.9     05 Nov 2023

	* Update urllib3 to address Dependabot warnings.
	* Upgrade to Poetry v1.7.0 for official Python 3.12 support.

Version 3.7.8     15 Oct 2023

	* Fix Python 3.12 deprecation for datetime.datetime.utcnow().
	* Fix Python 3.12 warning for tar.extract() filter behavior.
	* Fix some non-working remote connectivity tests in 'run tests full'.

Version 3.7.7     14 Oct 2023

	* Upgrade major dependencies.
	* Upgrade build process to Poetry v1.6.1.
	* Add support for Python v3.12 and drop support for v3.8.
	* Document changes to scp configuration for Debian bookworm.

Version 3.7.6     10 Jun 2023

	* Pin chardet and importlib-metadata to match Debian bookworm.

Version 3.7.5     07 Jun 2023

	* Fix checktabs to be safe for file named '-'.
	* Upgrade all dependencies to the latest major version.
	* Upgrade to Poetry v1.5.1 and make related adjustments.

Version 3.7.4     31 Dec 2022

	* Pull Sphinx fields from metadata rather than parsing pyproject.toml.

Version 3.7.3     30 Dec 2022

	* Convert to latest readthedocs.io standard.
	* Update remaining docs, comments, and checks to reflect dropping Python 3.7.
	* Automate the existing manual release process using GitHub Actions.

Version 3.7.2     30 Dec 2022

	* More improvements to metadata for the Debian CI test process.
